# qrmenuBackend

./: .env.example  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: category.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_category_table.rs  m20241212_141404_create_users_table.rs
src/: main.rs
src/auth/: jwt.rs
src/handler/: auth.rs
